Mon Mar 26 14:42:59 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpango.h: Remove stale FIXME comment.

2001-03-26  Alexander Larsson  <alla@lysator.liu.se>

	* gtk/gtkfilesel.c (gtk_file_selection_get_filename):
	Fixed bug that returned NULL if a filename was selected.

2001-03-24  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkthemes.c (gtk_theme_engine_load): improve error message
	to contain the word "theme"

2001-03-24  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkhsv.c (gtk_hsv_move): make motion around the ring much
	slower but finer-grained
	(gtk_hsv_focus): get initial focus on the ring or triangle 
	according to tab direction

	* gtk/testgtk.c (main): get rid of weird sleep(1) on exit

2001-03-23  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkhsv.c: make this somewhat key-navigable

	* gtk/gtkfontsel.c: mnemonics

	* gtk/gtkgamma.c: mnemonics

	* gtk/gtkcolorsel.c: add mnemonics to labels

2001-03-22  Havoc Pennington  <hp@pobox.com>

	Applied big patch from Seth Lytle to fix event handler return
	values, slightly modified.

	* gtk/gtkcalendar.c (gtk_calendar_button_press): return TRUE if
	handled.
	(gtk_calendar_key_press): return TRUE for GDK_space triggers
	select_day

	* gtk/gtkclist.c (gtk_clist_button_press): return TRUE if handled
	(gtk_clist_button_release): return TRUE if handled

	* gtk/gtkcolorsel.c (mouse_release):
	(palette_activate): 
	(palette_press): 
	(palette_new): 
	(mouse_press): 
	(get_screen_color): 
	fixed return type (void to gboolean), return TRUE,
	added GTK_SIGNAL_FUNC cast

	* gtk/gtkcombo.c (gtk_combo_popup_button_press): fixed return type
	(void to gboolean), and return TRUE
	(gtk_combo_button_release): changed return value to TRUE after
	gtk_grab_add on combo->popwin

	* gtk/gtkctree.c (gtk_ctree_button_press): return TRUE if triggers a
	collapse or expand

	* gtk/gtkcurve.c (gtk_curve_graph_events): return TRUE for
	button/motion

	* gtk/gtkdnd.c (gtk_drag_source_event_cb): return TRUE for button